--- a/service2/templates/service2.html
+++ b/service2/templates/service2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Service 1</title>
+    <title>Service 2</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
@@ -15,8 +15,9 @@
         </ul>
     </nav>
     <div class="container">
-        <h1>Service 1</h1>
-        <p>This is the home page for Service 1.</p>
+        <h1>SQL Online Compiler</h1>
+        <p>Use the SQL online compiler to write and execute SQL queries.</p>
+        <iframe src="https://www.programiz.com/sql/online-compiler" width="100%" height="600"></iframe>
     </div>
 </body>
 </html>
